<resources>


  <string name="title_activity_file_home_actitivty">FileHomeActitivty</string>
  <string name="title_activity_main2">Main2Activity</string>

  <string name="app_name">ABAS</string>
  <string name="login">Login</string>
  <string name="sign_up">Sign Up</string>
  <string name="app_banner_image_view_description">This is the application banner.</string>
  <string name="navigation_drawer_open">Open navigation drawer</string>
  <string name="navigation_drawer_close">Close navigation drawer</string>
  <string name="nav_header_title">Android Studio</string>
  <string name="nav_header_subtitle">android.studio@android.com</string>
  <string name="nav_header_desc">Navigation header</string>
  <string name="name">Name:</string>
  <string name="first_name_last_name">First Name, Last Name</string>
  <string name="email">Email</string>
  <string name="email_w_colon">Email:</string>
  <string name="password">Password</string>
  <string name="password_w_colon">Password:</string>
  <string name="confirm_password">Confirm Password</string>
  <string name="back">Back</string>
  <string name="file">File</string>
  <string name="search_beacon">Search Beacon</string>
  <string name="sendfile">Send File</string>
  <string name="record">Record</string>
  <string name="setting">Setting</string>
  <string name="receivefile">Receive File"</string>
  <string name="logout">Logout</string>
  <string name="the_search_beacon_image_button">The search beacon image button</string>
  <string name="the_file_image_button">The file image button</string>
  <string name="the_record_image_button">The record image button</string>
  <string name="hello_blank_fragment">Hello blank fragment</string>
  <string name="home">Home</string>
  <string name="classes">Classes</string>
  <string name="user_type_prompt">Choose a User Type:</string>
  <string name="staff_id">Staff ID</string>
  <string name="staff_id_w_colon">Staff ID:</string>
  <string name="title_w_colon">Title:</string>
  <string-array name="user_type_arrays">
    <item>Admin</item>
    <item>Teacher</item>
  </string-array>
  <string-array name="user_title_array">
    <item>Mr.</item>
    <item>Mrs.</item>
    <item>Ms.</item>
    <item>Dr.</item>
  </string-array>

</resources>
